# aws-sam-template-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
scripts/: make-deps.sh
services/hello_world/: app.py
tests/unit/: test_handler.py
